Re-architected with SQS as timer backend for periods under 48 hours
